# clipboard-manager

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docker/: Dockerfile.linux-gui  Dockerfile.linux-test  run-linux-tests.sh  start-gui-session.sh
src/: ClipboardManager.cpp  ClipboardManager.h  ansi.h  main.cpp
src/platform/: clipboard_linux.cpp  clipboard_mac.mm  clipboard_win.cpp  hotkey.h  hotkey_linux.cpp  hotkey_mac.mm  paths.cpp  paths.h  service.hpp  service_unix.cpp  service_win.cpp  window.h  window_linux.cpp  window_mac.mm
tests/: paste_entry_by_content_test.cpp  race_regression_test.cpp
